# move_group_interface

./: CMakeLists.txt  README.md  package.xml
config/: chomp_planning.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda_ros_controller.yaml  ros_controllers.yaml  ur5_rg2.srdf
launch/: move_group.launch.py  move_group_interface_tutorial.launch.py  moveit.rviz
model/: cmd  ur_trajectory_pos_vel_cmd.sdf
src/: move_group_interface_tutorial.cpp
urdf/: ur5_rg2.urdf.xml
